--- a/Areas/User/assets/css/bookticket.css
+++ b/Areas/User/assets/css/bookticket.css
@@ -583,3 +583,34 @@
 .prevent-click {
     pointer-events: none;
 }
+
+.discount-area {
+    display: grid;
+}
+
+.discount-text {
+    font-size: 20px;
+    color: #4a4a4a;
+    font-weight: 500;
+}
+
+.name-text {
+    font-weight: 600;
+    font-size: 14px;
+    color: #4a4a4a;
+    text-decoration: none;
+}
+
+    .name-text:hover {
+        color: #4a4a4a;
+    }
+
+.chose-btn {
+    background-color: #F26B38;
+    color: #fff;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+}
